@@ -15,8 +15,14 @@ print STDERR "================ DSI+AMH test\n";
 
 unlink $iorfile;
 
-$SV = new PerlACE::Process ("server",
-                            "-o $iorfile");
+if (PerlACE::is_vxworks_test()) {
+  $SV = new PerlACE::Process ("server",
+                              "-o test.ior");
+}
+else {
+  $SV = new PerlACE::Process ("server",
+                              "-o $iorfile");
+}
 
 $CL = new PerlACE::Process ("client",
                             "-k file://$iorfile "
@@ -24,7 +30,7 @@ $CL = new PerlACE::Process ("client",
 
 $SV->Spawn ();
 
-if (PerlACE::waitforfile_timed ($iorfile, 15) == -1) {
+if (PerlACE::waitforfile_timed ($iorfile, $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$iorfile>\n";
     $SV->Kill ();
     exit 1;
