@@ -27,7 +27,7 @@ $CL = new PerlACE::Process ("client", "-k file://$gwfile -x -i 100");
 
 $SV->Spawn ();
 
-if (PerlACE::waitforfile_timed ($svfile, 10) == -1) {
+if (PerlACE::waitforfile_timed ($svfile, $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$svfile>\n";
     $SV->Kill ();
     exit 1;
@@ -35,7 +35,7 @@ if (PerlACE::waitforfile_timed ($svfile, 10) == -1) {
 
 $GW->Spawn ();
 
-if (PerlACE::waitforfile_timed ($gwfile, 10) == -1) {
+if (PerlACE::waitforfile_timed ($gwfile, $PerlACE::wait_interval_for_process_creation) == -1) {
     print STDERR "ERROR: cannot find file <$gwfile>\n";
     $SV->Kill ();
     $GW->Kill (); 
